Test for kOpInsertIMEText as well as kOpInsertText for platforms where right-to-left text is inserted by IME. Bug 243931, patch by Lina Kemmel lkemmel@il.ibm.com, r=smontagu, sr=roc.